fixed a reference issue since data_ingestion.py could not access the data folder. This is fixed by mounting the data volume to be accessible to others

--- a/data_ingestion/Dockerfile
+++ b/data_ingestion/Dockerfile
@@ -16,6 +16,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the data ingestion script and data
 COPY data_ingestion.py .
-COPY ../data/data.jsonl ./data.jsonl
+# COPY ../data/data.jsonl ./data.jsonl
 
 # The entrypoint will be defined in the docker-compose.yml
